# rust-ask-gpt

./: Cargo.toml  readme.md
src/: main.rs  model.rs  spinner.rs
